test/errors/path_no_definido.mg
% EXPECT: path no definido: nope
display_size 5 5
polyline(&nope)
